# jaxel-test

./: .env  docker-compose.yml
consumer/: consumer.dockerfile
consumer/app/: prestart.sh  pyproject.toml  start.sh
consumer/app/app/: config.py  consumer_pre_start.py  main.py
consumer/app/app/components/: consumer.py
consumer/app/app/models/: item.py
producer/: producer.dockerfile
producer/app/: pyproject.toml
producer/app/app/: config.py  main.py
producer/app/app/components/: common.py  http_client.py  kafka_client.py
producer/app/app/models/: item.py
producer/app/scripts/: format.sh
