[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Sam <xneklyudx@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiokafka = "^0.7.2"
aiohttp = "^3.8.1"
betterconf = "^2.6.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
